--- a/Interfaces (Web)/css/materialize.css
+++ b/Interfaces (Web)/css/materialize.css
@@ -1020,11 +1020,11 @@
 }
 
 .teal.lighten-1 {
-  background-color: #26a69a !important;
+  background-color: #ED5757 !important;
 }
 
 .teal-text.text-lighten-1 {
-  color: #26a69a !important;
+  color: #ED5757 !important;
 }
 
 .teal.darken-1 {
@@ -3060,7 +3060,7 @@ td, th {
 }
 
 .collection .collection-item.active {
-  background-color: #26a69a;
+  background-color: #ED5757;
   color: #eafaf9;
 }
 
@@ -3071,7 +3071,7 @@ td, th {
 .collection a.collection-item {
   display: block;
   transition: .25s;
-  color: #26a69a;
+  color: #ED5757;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3094,7 +3094,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #26a69a;
+  color: #ED5757;
 }
 
 .collapsible .collection {
@@ -3133,12 +3133,12 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #26a69a;
+  background-color: #ED5757;
   transition: width .3s linear;
 }
 
 .progress .indeterminate {
-  background-color: #26a69a;
+  background-color: #ED5757;
 }
 
 .progress .indeterminate:before {
@@ -3301,7 +3301,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #26a69a;
+  background-color: #ED5757;
   border-radius: 2px;
 }
 
@@ -5176,7 +5176,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #26a69a;
+  background-color: #ED5757;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
@@ -5197,7 +5197,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #26a69a;
+  background-color: #ED5757;
   border-radius: 50%;
   transition: .3s;
   cursor: pointer;
@@ -5205,7 +5205,7 @@ small {
 }
 
 .btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #ED5757;
 }
 
 .btn-floating:before {
@@ -5352,7 +5352,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #26a69a;
+  background-color: #ED5757;
   border-radius: 50%;
   -webkit-transform: scale(0);
           transform: scale(0);
@@ -5437,7 +5437,7 @@ button.btn-floating {
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #26a69a;
+  color: #ED5757;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -5806,8 +5806,8 @@ button.btn-floating {
 }
 
 .chips.focus {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #ED5757;
+  box-shadow: 0 1px 0 0 #ED5757;
 }
 
 .chips:hover {
@@ -5815,7 +5815,7 @@ button.btn-floating {
 }
 
 .chips .chip.selected {
-  background-color: #26a69a;
+  background-color: #ED5757;
   color: #fff;
 }
 
@@ -6033,8 +6033,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #ED5757;
+  box-shadow: 0 1px 0 0 #ED5757;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6050,7 +6050,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #ED5757;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
@@ -6261,7 +6261,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #ED5757;
 }
 
 .input-field .prefix ~ input,
@@ -6441,12 +6441,12 @@ textarea.materialize-textarea {
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:before,
 [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #26a69a;
+  border: 2px solid #ED5757;
 }
 
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:after {
-  background-color: #26a69a;
+  background-color: #ED5757;
 }
 
 [type="radio"]:checked + label:after {
@@ -6579,8 +6579,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #26a69a;
-  border-bottom: 2px solid #26a69a;
+  border-right: 2px solid #ED5757;
+  border-bottom: 2px solid #ED5757;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
   -webkit-backface-visibility: hidden;
@@ -6602,7 +6602,7 @@ form p:last-child {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #26a69a;
+  border-right: 2px solid #ED5757;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -6671,8 +6671,8 @@ form p:last-child {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #ED5757;
+  background-color: #ED5757;
   z-index: 0;
 }
 
@@ -6684,8 +6684,8 @@ form p:last-child {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + label:after {
   border-radius: 2px;
-  background-color: #26a69a;
-  border-color: #26a69a;
+  background-color: #ED5757;
+  border-color: #ED5757;
 }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + label:before {
@@ -6732,7 +6732,7 @@ form p:last-child {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #26a69a;
+  background-color: #ED5757;
   left: 24px;
 }
 
@@ -6981,7 +6981,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #ED5757;
   margin-left: 7px;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
@@ -6993,7 +6993,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #26a69a;
+  color: #ED5757;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -7026,7 +7026,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #ED5757;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
@@ -7054,7 +7054,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #ED5757;
   margin-top: -5px;
 }
 
@@ -7089,7 +7089,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #ED5757;
 }
 
 input[type=range]:focus::-ms-fill-lower {
@@ -7209,7 +7209,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .side-nav li > a.btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #ED5757;
 }
 
 .side-nav li > a > i,
@@ -7418,7 +7418,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #26a69a;
+  border-color: #ED5757;
 }
 
 .spinner-blue,
@@ -8701,7 +8701,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .picker__date-display {
   text-align: center;
-  background-color: #26a69a;
+  background-color: #ED5757;
   color: #fff;
   padding-bottom: 15px;
   font-weight: 300;
@@ -8764,7 +8764,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .picker__day.picker__day--today {
-  color: #26a69a;
+  color: #ED5757;
 }
 
 .picker__day.picker__day--today.picker__day--selected {
@@ -8781,7 +8781,7 @@ input[type=range]:focus::-ms-fill-upper {
   border-radius: 50%;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
-  background-color: #26a69a;
+  background-color: #ED5757;
   color: #ffffff;
 }
 
@@ -8799,7 +8799,7 @@ input[type=range]:focus::-ms-fill-upper {
 .picker__close, .picker__today {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #26a69a;
+  color: #ED5757;
 }
 
 .picker__nav--prev:before,
