--- a/Interfaces (Web)/css/materialize.css
+++ b/Interfaces (Web)/css/materialize.css
@@ -6813,6 +6813,7 @@ select {
 .select-wrapper input.select-dropdown {
   position: relative;
   cursor: pointer;
+  color: #696969;
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #9e9e9e;
